--- a/OpsManage/templates/accounts/userEdit.html
+++ b/OpsManage/templates/accounts/userEdit.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
-        <link rel="stylesheet" type="text/css" href="/static/css/style.css" />
+        <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
         <script type="text/javascript">
             function checkPwd(){
                 if (document.getElementById("newPassword").value == document.getElementById("checkPassword").value && document.getElementById("checkPassword").value){
