--- a/OpsManage/templates/base.html
+++ b/OpsManage/templates/base.html
@@ -104,7 +104,9 @@ desired effect
                                  <p>
                                     {{ USERNAME }}
                                     {% if Perm == 1 %}
-                                        <a target="_blank" class="full-opacity-hover" href="/accounts/manageUser" style="margin-top:0.2em; display: block;font-size: 0.7em;color: white;">管理员权限</a>
+{#                                        <a target="_blank" class="full-opacity-hover" href="/accounts/manageUser" style="margin-top:0.2em; display: block;font-size: 0.7em;color: white;">管理员权限</a>#}
+                                        <small>管理员</small>
+
                                     {% else %}
                                         <small>普通用户</small>
                                     {% endif %}
