--- a/OpsManage/templates/cmdb/ServerManage/add/add.html
+++ b/OpsManage/templates/cmdb/ServerManage/add/add.html
@@ -414,7 +414,7 @@
 {% endblock main_content %}
 
 {% block foot_js %}
-<script type="text/javascript" src="/static/dist/layer/layer.js"></script>
+{#<script type="text/javascript" src="/static/dist/layer/layer.js"></script>#}
 <script>
     //根据设备类型显示设备子类型
     $(function () {
