--- a/OpsManage/templates/cmdb/basicData/addIdc.html
+++ b/OpsManage/templates/cmdb/basicData/addIdc.html
@@ -8,11 +8,9 @@
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 
     <!-- Theme style -->
-    <link rel="stylesheet" href="/static/dist/css/AdminLTE.min.css">
+    <link rel="stylesheet" href="{% static 'dist/css/AdminLTE.min.css' %}">
 
-
-{#    <link rel="stylesheet" href="{% static 'css/cmdb/ServerManage/form.css'%}">#}
-        <link href="/static/css/form2.css" rel="stylesheet" type="text/css">
+     <link href="{% static 'css/form2.css' %}" rel="stylesheet" type="text/css">
         <style>
         body{font-family:'Open Sans',sans-serif;padding:20px;margin:0;background:url(/static/img/bg.png);}
         .container{padding:30px;margin:30px auto;background:#fff;border:1px solid #ccc;width:70%;}
