--- a/OpsManage/templates/cmdb/ServerManage/asset.html
+++ b/OpsManage/templates/cmdb/ServerManage/asset.html
@@ -2,9 +2,10 @@
 
 
 {% block css_block %}
-<link rel="stylesheet" href="/static/dist/paginationjs/pagination.css">
+<!--<link rel="stylesheet" href="/static/dist/paginationjs/pagination.css">-->
+<link rel="stylesheet" href="{% static 'dist/paginationjs/pagination.css' %}">
 <!--<link rel="stylesheet" href="/static/dist/search_dropDown/search_dropDown.css">-->
-<link rel="stylesheet" href="/static/dist/jquery-confirm/jquery-confirm.min.css">
+<link rel="stylesheet" href="{% static 'dist/jquery-confirm/jquery-confirm.min.css' %}">
 <!--<link rel="stylesheet" href="/static/dist/easyui/easyui.css">-->
 
 {% endblock%}
@@ -283,10 +284,13 @@
 
 {% block foot_js %}
 
-<script type="text/javascript" src="/static/dist/layer/layer.js"></script>
-<script type="text/javascript" src="/static/dist/paginationjs/pagination.min.js"></script>
+<!--<script type="text/javascript" src="/static/dist/layer/layer.js"></script>-->
+<script src=" {% static 'dist/layer/layer.js' %}"> </script>
+<!--<script type="text/javascript" src="/static/dist/paginationjs/pagination.min.js"></script>-->
+<script src=" {% static 'dist/paginationjs/pagination.min.js' %}"> </script>
 <!--<script type="text/javascript" src="/static/dist/search_dropDown/search_dropDown.js"></script>-->
-<script type="text/javascript" src="/static/dist/jquery-confirm/jquery-confirm.min.js"></script>
+<!--<script type="text/javascript" src="/static/dist/jquery-confirm/jquery-confirm.min.js"></script>-->
+<script src=" {% static 'dist/jquery-confirm/jquery-confirm.min.js' %}"> </script>
 <!--<script type="text/javascript" src="/static/dist/easyui/jquery.easyui.min.js"></script>-->
 <!--设备详细页面弹窗-->
 <script type="text/javascript">
