--- a/OpsManage/templates/cmdb/ServerManage/detail.html
+++ b/OpsManage/templates/cmdb/ServerManage/detail.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+{% load staticfiles %}
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="/static/dist/bootstrap-3.3.7-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/dist/css/AdminLTE.min.css">
+    <link rel="stylesheet" href="{% static 'dist/bootstrap-3.3.7-dist/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'dist/css/AdminLTE.min.css' %}">
     <!--{#    <link href="/static/user/css/asset_detail.css" rel="stylesheet">#}-->
     <title>{{ ASSET.asset_name }}</title>
 
@@ -369,9 +370,9 @@
 </section>
 
 {% endif %}
-<script src="/static/dist/js/jquery-3.3.1.min.js"></script>
-<script src="/static/dist/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
-<script src="/static/dist/js/adminlte.min.js"></script>
+<script src=" {% static 'dist/js/jquery-3.3.1.min.js' %}"> </script>
+<script src=" {% static 'dist/bootstrap-3.3.7-dist/js/bootstrap.min.js' %}"> </script>
+<script src=" {% static 'dist/js/adminlte.min.js' %}"> </script>
 
 <!--<script src="/static/plugins/jsPDF-1.3.2/libs/html2canvas/dist/html2canvas.js"></script>-->
 <!--<script src="/static/plugins/jsPDF-1.3.2/dist/jspdf.debug.js"></script>-->
