--- a/OpsManage/templates/cmdb/basicData/editCab.html
+++ b/OpsManage/templates/cmdb/basicData/editCab.html
@@ -128,7 +128,7 @@
                             <!-- /.box-header -->
 
                             <!-- form start -->
-                            <form class="contactl" action="editACabinetSubmit?cabId={{ CABINET.id }}" method="post">
+                            <form class="contactl" action="editACabinetSubmit?cabId={{ CABINET.id }}&idcId={{ IDC.id }}" method="post">
                                 <div class="box-body">
                                     <div class="form-group">
                                         <label class=" control-label">机柜名称</label>
