--- a/OpsManage/templates/cmdb/ServerManage/asset.html
+++ b/OpsManage/templates/cmdb/ServerManage/asset.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 
+{% load staticfiles %}
 
 {% block css_block %}
 <!--<link rel="stylesheet" href="/static/dist/paginationjs/pagination.css">-->
