--- a/OpsManage/templates/cmdb/basicData/supplierManage.html
+++ b/OpsManage/templates/cmdb/basicData/supplierManage.html
@@ -34,6 +34,7 @@
 
                             <!-- 供应商清单 -->
                             <form method="post" action="supplierManage" id="deleteForm">
+                                {% csrf_token %}
                                 <div class="box-body table-responsive ">
                                     <table class="table table-hover">
                                         <tr>
@@ -87,6 +88,7 @@
 
                             <!-- form start -->
                             <form class="contactl" action="addSupplierSubmitM" method="post" id="form">
+                                {% csrf_token %}
                                 <div class="box-body">
                                     <div class="form-group">
                                         <label class=" control-label">供应商名称</label>
@@ -130,6 +132,7 @@
 
                             <!-- form start -->
                             <form class="contactl" action="editSupplierSubmitM?supplierId={{ SUPPLIER.id }}" method="post">
+                                {% csrf_token %}
                                 <div class="box-body">
                                     <div class="form-group">
                                         <label class=" control-label">供应商名称</label>
