--- a/OpsManage/templates/login.html
+++ b/OpsManage/templates/login.html
@@ -46,6 +46,7 @@
     <p class="login-box-msg">Sign in to start your session</p>
 
     <form id="login-form"  method="post" action="/loginSubmit">
+      {% csrf_token %}
       <div class="form-group has-feedback">
         <input type="text" class="form-control" name="username" id="userName" placeholder="User">
         <span class="glyphicon glyphicon-user form-control-feedback"></span>
