--- a/OpsManage/templates/cmdb/ServerManage/add/add.html
+++ b/OpsManage/templates/cmdb/ServerManage/add/add.html
@@ -49,6 +49,7 @@
 
     <!-- /.box-header -->
     <form class="contact" action="addSubmit" method="post" id="addForm" enctype=”multipart/form-data”>
+        {% csrf_token %}
         <div class="box-body">
 
             <div class="row" style="margin-top: 25px">
