--- a/OpsManage/templates/cmdb/ServerManage/add/editForeignKey/editVendor.html
+++ b/OpsManage/templates/cmdb/ServerManage/add/editForeignKey/editVendor.html
@@ -41,6 +41,7 @@
 
                             <!-- 供应商清单 -->
                             <form method="post" action="editVendor" id="deleteForm">
+                                {% csrf_token %}
                                 <div class="box-body table-responsive ">
                                     <table class="table table-hover">
                                         <tr>
@@ -92,6 +93,7 @@
 
                             <!-- form start -->
                             <form class="contactl" action="addVendorSubmit" method="post">
+                                {% csrf_token %}
                                 <div class="box-body">
                                     <div class="form-group">
                                         <label class=" control-label">厂商名称</label>
@@ -129,6 +131,7 @@
 
                             <!-- form start -->
                             <form class="contactl" action="editVendorSubmit?vendorId={{ VENDOR.id }}" method="post">
+                                {% csrf_token %}
                                 <div class="box-body">
                                     <div class="form-group">
                                         <label class=" control-label">厂商名称</label>
