--- a/OpsManage/templates/cmdb/ServerManage/add/editForeignKey/editModel.html
+++ b/OpsManage/templates/cmdb/ServerManage/add/editForeignKey/editModel.html
@@ -100,7 +100,7 @@
                                 <div class="box-body">
                                     <div class="form-group">
                                         <label class=" control-label">厂商图片</label>
-                                        <input type="file" name="myfile" accept="image/*">
+                                        <input required type="file" name="myfile" accept="image/*">
                                     </div>
 
                                     <div class="form-group">
@@ -145,7 +145,7 @@
                                 <div class="box-body">
                                     <div class="form-group">
                                         <label class=" control-label">厂商图片</label>
-                                            <input  type="file" name="image">
+                                            <input  required type="file" name="image">
                                     </div>
 
                                     <div class="form-group">
