--- a/OpsManage/templates/cmdb/basicData/modelManage.html
+++ b/OpsManage/templates/cmdb/basicData/modelManage.html
@@ -92,7 +92,7 @@
                                 <div class="box-body">
                                     <div class="form-group">
                                         <label class=" control-label">厂商图片</label>
-                                        <input type="file" name="myfile" accept="image/*">
+                                        <input required type="file" name="myfile" accept="image/*">
                                     </div>
 
                                     <div class="form-group">
@@ -134,7 +134,7 @@
                                 <div class="box-body">
                                     <div class="form-group">
                                         <label class=" control-label">厂商图片</label>
-                                            <input  type="file" name="image">
+                                            <input required type="file" name="image">
                                     </div>
 
                                     <div class="form-group">
