--- a/OpsManage/templates/cmdb/ServerManage/edit/editARecord.html
+++ b/OpsManage/templates/cmdb/ServerManage/edit/editARecord.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load staticfiles %}
 
 {% block css_block %}
 <!--<link href="/static/dist/css/bootstrap-multiselect.css" rel="stylesheet">-->
